<resources>
    <string name="app_name">Calendar Tracker</string>
    <string name="title_upcoming_event">Upcoming Events</string>
    <string name="title_records">Records</string>
    <string name="title_setting">Setting</string>
    <string name="title_help">Help</string>

    <!--EVENT-->
    <string name="event_recurring_n_times">\u0020times recurring event,\u0020</string>
    <!--EVENT & RECORD-->
    <string name="gr_date">Gregorian Date :\u0020</string>
    <string name="el_date">Eastern Lunar Date :\u0020</string>

    <!--EDIT RECORD-->
    <string name="edit_record_add">Add New Record</string>
    <string name="edit_record_edit">Edit Record</string>
    <string name="edit_record_name">Name</string>
    <string name="edit_record_lunar_date">Lunar Date</string>
    <string name="edit_record_is_leap_month">Leap Month</string>
    <string name="edit_record_date_format">YYYY/MM/DD</string>
    <string name="edit_record_save">Save</string>
    <string name="edit_record_empty_name_field">Event name cannot be empty</string>
    <string name="edit_record_invalid_date">Invalid date entered. Use YYYY/MM/DD format and check
        for correct leap month.</string>
    <string name="edit_record_delete">Delete</string>
    <string name="edit_record_user_added">Added <b>%1$s</b></string>
    <string name="edit_record_user_deleted">Deleted <b>%1$s</b></string>

    <!--PARSE-->
    <string name="parse_require_permission_short">In order to parse upcoming events to your calendar,
        the app requires your permission to the calendar access.</string>
    <string name="parse_require_permission_long">In order to parse upcoming events to your calendar,
        the app requires your permission to the calendar access. Would you like to go to Setting
        and give the permission to \'Calendar\' manually?</string>
    <string name="parse_request_permission">Grant Permission</string>
    <string name="parse_create_event_confirmation">The whole list of \'Upcoming Events\' will be
        parsed into your Google Calendar. Proceed?</string>
    <string name="parse_single_item_confirmation">You\'re about to be directed to Google Calendar.
        Manually adding events to Google Calendar may cause duplicate events. Proceed? </string>
    <string name="parse_finished">Finished Parsing %1$s to Calendar</string>


    <!--SETTING-->
    <string name="setting_theme"><b>Theme</b></string>
    <string name="setting_theme_system">Default System Theme Setting</string>
    <string name="setting_theme_light">Light</string>
    <string name="setting_theme_dark">Dark</string>
    <string name="setting_uploading_event"><b>Events Upload</b></string>
    <string name="setting_add_reminder">Add Calendar Reminder</string>
    <string name="setting_remind_me"><b>Set reminder before the event</b></string>
    <string name="setting_before_hour">1 hour</string>
    <string name="setting_before_day">1 day</string>
    <string name="setting_account"><b>Account</b></string>
    <string name="setting_account_delete">Delete Account</string>
    <string name="setting_account_sign_out">Sign out</string>
    <string name="setting_account_signed_out">Successfully signed out.</string>
    <string name="setting_account_deleted">Successfully deleted.</string>
    <string name="setting_account_delete_warning">All of your data stored will be deleted. Are
        you sure?</string>



    <!--ETC-->
    <string name="etc_yes">Yes</string>
    <string name="etc_no">No</string>
    <string name="etc_ok">OK</string>
    <string name="etc_do_nat_ask">Proceed and Do Not Ask Again</string>
    <string name="etc_cancel">Cancel</string>
    <string name="etc_warning">Warning</string>
    <string name="etc_ask_delete_confirmation">Are you sure you wish to delete %1$s?</string>

    <!--ONBOARDING-->
    <string name="onboarding_event_demo">Upcoming events can be directly sent to Google
        Calendar for the specific event. You can also parse the whole at once with \'Upload\' button
        at the top right corner.</string>
    <string name="onboarding_record_demo">Records can be deleted by swiping left.</string>
    <string name="onboarding_setting_demo">Settings for dark mode, reminders are available.</string>
    <string name="onboarding_sign_in">Enjoy using Calendar Tracker! Now Sign in with Google Account
        to start</string>


    <string name="server_client_id">963527123473-f4nfg4h0j1ta0m30i9m5h2ps4vl29pvi.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>