<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".ui.setting.SettingFragment">


    <TextView
        android:id="@+id/setting_theme_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/setting_theme" />

    <RadioGroup
        android:id="@+id/setting_theme_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/setting_system_theme_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_theme_system" />

        <RadioButton
            android:id="@+id/setting_light_theme_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_theme_light" />

        <RadioButton
            android:id="@+id/setting_dark_theme_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_theme_dark" />

    </RadioGroup>

    <TextView
        android:id="@+id/setting_upload_event_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/setting_uploading_event" />

    <Switch
        android:id="@+id/setting_reminder_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="17sp"
        android:text="@string/setting_add_reminder"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:id="@+id/setting_reminder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setting_remind_me_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/setting_remind_me" />

        <RadioGroup
            android:id="@+id/setting_remind_me_before_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/setting_before_day_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_before_day" />

            <RadioButton
                android:id="@+id/setting_before_hour_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_before_hour" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/setting_account_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/setting_account" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="2dp">
        <TextView
            android:id="@+id/setting_account_sign_out_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:padding="10dp"
            android:text="@string/setting_account_sign_out" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="2dp">
        <TextView
            android:id="@+id/setting_account_delete_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:padding="10dp"
            android:text="@string/setting_account_delete" />
    </androidx.cardview.widget.CardView>

</LinearLayout>