<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.record.EditRecordFragment">


    <TextView
        android:id="@+id/edit_record_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_record_name" />

    <EditText
        android:id="@+id/edit_record_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <TextView
        android:id="@+id/edit_record_lunar_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_record_lunar_date" />

    <EditText
        android:id="@+id/edit_record_lunar_date_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="Name" />




    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_record_is_leap_month"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


</LinearLayout>