<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_upcoming_event">

    <fragment
        android:id="@+id/navigation_upcoming_event"
        android:name="com.example.calendartracker.ui.event.EventFragment"
        android:label="@string/title_upcoming_event"
        tools:layout="@layout/fragment_event" >
        <action
            android:id="@+id/action_navigation_upcoming_event_to_navigation_setting"
            app:destination="@id/navigation_setting"
            app:popUpTo="@+id/navigation_upcoming_event"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.example.calendartracker.ui.record.RecordFragment"
        android:label="@string/title_records"
        tools:layout="@layout/fragment_record" >
        <action
            android:id="@+id/action_navigation_records_to_navigation_edit_record"
            app:destination="@id/navigation_edit_record" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.calendartracker.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_edit_record"
        android:name="com.example.calendartracker.ui.record.EditRecordFragment"
        tools:layout="@layout/fragment_edit_record" >
        <action
            android:id="@+id/action_navigation_edit_record_to_navigation_records"
            app:destination="@id/navigation_records" />
    </fragment>
</navigation>